<resources>
    <string name="app_name">tenant finder</string>
    <string name="userid_txt">E-mail</string>
    <string name="password_txt">Password</string>
    <string name="signin_txt">Sign In</string>
    <string name="newuser_txt">New User? Sign Up</string>
    <string name="firstname_txt">First Name</string>
    <string name="lastname_txt">Last Name</string>
    <string name="email_txt">E-mail</string>
    <string name="phoneno._txt">Phone No.</string>
    <string name="signup_txt">Sign Up</string>
    <string name="confpass_txt">Confirm-Password</string>
    <string name="alreadyuser_txt">Already a User? Sign In</string>
    <string name="hometxt">Home</string>
    <string name="mypropertiestxt">My Property</string>
    <string name="profiletxt">My Profile</string>
    <string name="foregetpass_txt">Forget Password?</string>
    <string name="hello_blank_fragment">Hello</string>
    <string name="signoutbtn">Sign out</string>
    <string name="fullname">Full Name : </string>
    <string name="emailprf">E-Mail : </string>
    <string name="phoneprf">Phone No. : </string>
    <string name="updatetxt">Update</string>
    <string name="myprofiletxt">My Profile</string>
    <string name="fstname">First Name : </string>
    <string name="lstname">Last Name : </string>
    <string name="eml">Email : </string>
    <string name="phn">Phone No. : </string>
    <string name="fgtpass">Forget Password ?</string>
    <string name="description">Description</string>
    <string name="adrs">Address</string>
    <string name="contact_details">Contact Details</string>
    <string name="add_prop">Add Property</string>
    <string name="size">Size : </string>
    <string name="ownername">Name : </string>
    <string name="getlink">Get Link</string>
    <string name="noofbedroom">No. of Bedroom : </string>
    <string name="noofhall">No. of Hall : </string>
    <string name="noofkitchen">No. of Kitchen : </string>
    <string name="personaldtls">Personal Details</string>
    <string name="editprfl">Edit Profile</string>
    <string name="show">show</string>
    <string name="hide">hide</string>
    <string name="showpassword">show password</string>
</resources>