<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/passwordview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:ems="10"
        android:hint="@string/password_txt"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/emailview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/passwordview"
        android:layout_centerInParent="true"
        android:layout_marginTop="252dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/userid_txt"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/passwordview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signinbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordview"
        android:layout_centerInParent="true"
        android:layout_marginTop="66dp"
        android:text="@string/signin_txt" />

    <TextView
        android:id="@+id/signupview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="17dp"
        android:text="@string/newuser_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.953" />

    <TextView
        android:id="@+id/forgetpassview"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_below="@id/signinbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="176dp"
        android:text="@string/fgtpass"
        app:layout_constraintBottom_toTopOf="@+id/signupview" />


</RelativeLayout>