<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_Up"
    android:background="@drawable/back2">

    <ImageButton
        android:id="@+id/profileimage"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30sp"
        android:src="@drawable/ic_baseline_person_24"
        android:background="@drawable/round_corners"/>

    <EditText
        android:id="@+id/firstnameview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/profileimage"
        android:layout_marginTop="50sp"
        android:ems="10"
        android:hint="@string/firstname_txt"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:background="@drawable/custom_input"
        android:padding="10sp"/>


    <EditText
        android:id="@+id/lastnameview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstnameview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15sp"
        android:hint="@string/lastname_txt"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:ems="10"
        android:background="@drawable/custom_input"
        android:padding="10sp"
        />

    <EditText
        android:id="@+id/newemail"
        android:hint="@string/email_txt"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastnameview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15sp"
        android:ems="10"
        android:background="@drawable/custom_input"
        android:padding="10sp"
        />

    <EditText
        android:id="@+id/newpassview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newemail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15sp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/password_txt"
        android:inputType="textPassword"
        android:padding="10sp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/confpassview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newpassview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15sp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/confpass_txt"
        android:inputType="textPassword"
        android:padding="10sp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/newphoneview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confpassview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15sp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/phoneno._txt"
        android:inputType="number"
        android:padding="10sp"
        android:textSize="20sp"
        android:maxLength="10"/>

    <Button
        android:id="@+id/signupbtnview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/alreadyuser"
        android:layout_marginBottom="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp"
        android:text="@string/signup_txt" />

    <TextView
        android:id="@+id/alreadyuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10sp"
        android:text="@string/alreadyuser_txt" />



</RelativeLayout>