<!--<?xml version="1.0" encoding="utf-8"?>-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/background"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".add_property"

        >

        <TextView
            android:id="@+id/no_hallH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25sp"
            android:layout_marginTop="30sp"
            android:text="@string/noofhall"
            android:textSize="18sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/no_hall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="10sp"
            android:layout_marginTop="20sp"
            android:layout_toRightOf="@+id/no_hallH"
            android:background="@drawable/custom_input"
            android:ems="3"
            android:inputType="number"
            android:maxLength="1"
            android:padding="10sp"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/no_kitH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25sp"
            android:layout_marginTop="30sp"
            android:layout_below="@id/no_hallH"
            android:text="@string/noofkitchen"
            android:textSize="18sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/no_kit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:layout_toRightOf="@+id/no_kitH"
            android:layout_below="@id/no_hall"
            android:background="@drawable/custom_input"
            android:ems="3"
            android:inputType="number"
            android:maxLength="1"
            android:padding="10sp"
            android:textAlignment="center"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/no_bedH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25sp"
            android:layout_marginTop="30sp"
            android:text="@string/noofbedroom"
            android:textSize="18sp"
            android:textStyle="italic"
            android:layout_below="@id/no_kitH"
            />

        <EditText
            android:id="@+id/no_bed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:layout_toRightOf="@+id/no_bedH"
            android:background="@drawable/custom_input"
            android:ems="3"
            android:inputType="number"
            android:maxLength="1"
            android:padding="10sp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_below="@id/no_kit"
            />





        <TextView
            android:id="@+id/addp_descH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/no_bedH"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20sp"
            android:text="@string/description"
            android:textSize="30sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/addp_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/addp_descH"
            android:layout_marginStart="25sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="25sp"
            android:background="@drawable/custom_input"
            android:maxLength="150"
            android:padding="10sp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/addp_addressH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addp_desc"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20sp"
            android:text="@string/adrs"
            android:textSize="30sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/addp_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addp_addressH"
            android:layout_marginStart="25sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="25sp"
            android:background="@drawable/custom_input"
            android:maxLength="100"
            android:padding="10sp"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/addp_cntcH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addp_address"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20sp"
            android:text="@string/contact_details"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/addp_nameH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addp_cntcH"
            android:layout_marginStart="40sp"
            android:layout_marginTop="20sp"
            android:text="@string/ownername"
            android:textSize="20sp"
            android:textStyle="italic"
            />


        <EditText
            android:id="@+id/addp_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addp_cntcH"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="25sp"
            android:layout_toRightOf="@+id/addp_nameH"
            android:background="@drawable/custom_input"
            android:inputType="text"
            android:maxLength="50"
            android:padding="10sp"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/addp_emlH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addp_nameH"
            android:layout_marginStart="40sp"
            android:layout_marginTop="30sp"
            android:text="@string/emailprf"
            android:textSize="20sp"
            android:textStyle="italic" />


        <EditText
            android:id="@+id/addp_eml"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addp_name"
            android:layout_marginStart="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="25sp"
            android:layout_toRightOf="@+id/addp_emlH"
            android:background="@drawable/custom_input"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:padding="10sp"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/addp_phnH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addp_emlH"
            android:layout_marginStart="40sp"
            android:layout_marginTop="30sp"
            android:text="@string/phoneprf"
            android:textSize="20sp"
            android:textStyle="italic" />


        <EditText
            android:id="@+id/addp_phn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addp_eml"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="25sp"
            android:layout_toRightOf="@id/addp_phnH"
            android:background="@drawable/custom_input"
            android:inputType="number"
            android:maxLength="10"
            android:padding="10sp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/addp_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addp_phn"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="75sp"
            android:layout_marginEnd="25sp"
            android:text="@string/add_prop" />




    </RelativeLayout>


</ScrollView>


