<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Update_Profile"
    android:background="@color/background">

    <TextView
        android:id="@+id/fstnameview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fstname"
        android:textSize="20sp"
        android:layout_marginStart="25sp"
        android:layout_above="@id/lstnameview"/>

    <EditText
        android:id="@+id/firstudt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/lastudt"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="25sp"
        android:layout_toRightOf="@id/fstnameview"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10sp"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/lstnameview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lstname"
        android:textSize="20sp"
        android:layout_marginStart="25sp"
        android:layout_marginTop="50sp"
        android:layout_centerVertical="true"/>

    <EditText
        android:id="@+id/lastudt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="10sp"
        android:layout_marginTop="30sp"
        android:layout_marginEnd="25sp"
        android:layout_toRightOf="@id/lstnameview"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10sp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/phnnameview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phn"
        android:textSize="20sp"
        android:layout_marginStart="25sp"
        android:layout_marginTop="50sp"
        android:layout_below="@id/lstnameview"/>

    <EditText
        android:id="@+id/phoneudt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/phnnameview"
        android:layout_below="@+id/lastudt"
        android:layout_marginTop="30sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="25sp"
        android:textSize="20sp"
        android:ems="10"
        android:inputType="number"
        android:background="@drawable/custom_input"
        android:padding="10sp"
        android:maxLength="10"/>

    <Button
        android:id="@+id/buttonupdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/phnnameview"
        android:layout_marginTop="50sp"
        android:text="@string/updatetxt"/>




</RelativeLayout>