<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="10dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/descview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/description"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/descview"
                android:layout_alignParentStart="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/addressview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/desc"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/adrs"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/addressview"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/contact_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/contact_details"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/contact_email_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contact_view"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:text="@string/eml"
                android:textSize="12dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/contact_phone_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contact_email_view"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:text="@string/phoneprf"
                android:textSize="12dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/contact_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contact_view"
                android:layout_alignRight="@+id/contact_email_view"
                android:layout_marginTop="5dp"
                android:textSize="12dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/contact_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contact_email_view"
                android:layout_alignRight="@id/contact_phone_view"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:textSize="12dp"
                android:textStyle="normal" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>